--- a/index.ipynb
+++ b/index.ipynb
@@ -34,11 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here "
+    "# Your solution here \n",
+    "# 4x+4y=12\n",
+    "# 3x=2y\n",
+    "# 4x+(6x)=12\n",
+    "# x=12/10=1.2\n",
+    "# y=18/10=1.8\n",
+    "\n",
+    "# 4(1.2)+4(1.8)=12\n",
+    "# 4.8+7.2=12\n",
+    "\n",
+    "# 3(1.2)=2(1.8)\n",
+    "# 3.6=3.6"
    ]
   },
   {
@@ -62,11 +73,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here "
+    "# Your solution here \n",
+    "\n",
+    "# x>y\n",
+    "# x-20=y+20\n",
+    "# x+22=2(y-22)\n",
+    "\n",
+    "# x=y+40\n",
+    "# x+22=2y-44\n",
+    "# x=2y-66\n",
+    "# y+40=2y-66\n",
+    "# y=2y-106\n",
+    "# y=106\n",
+    "\n",
+    "# x-20=(106)+20\n",
+    "# x=146\n",
+    "\n",
+    "# (146)+22=2(106-22)\n",
+    "# 168=2(84)"
    ]
   },
   {
@@ -81,11 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here "
+    "# Your solution here \n",
+    "\n",
+    "# q+d=30\n",
+    "# 25q+10d=570\n",
+    "\n",
+    "# 10q+10d=300\n",
+    "# 300-10q=570-25q\n",
+    "# -10q=270-25q\n",
+    "# 15q=270\n",
+    "# q=18\n",
+    "# d=12\n",
+    "\n",
+    "# 25(18)+10(12)=450+120=570"
    ]
   },
   {
@@ -124,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
